--- a/hw.html
+++ b/hw.html
@@ -28,7 +28,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">About</a></li>
         <li><a href="#">Portfolio</a></li>
-        
+        <li><a href="#">Contact</a></li>
           </ul>
         </li>
       </ul>
@@ -64,10 +64,10 @@
 
 <div class="row">
     <div class="col-md-3">
-        <img src="https://i.pinimg.com/avatars/gremillion2045_1407265336_280.jpg">
+        <img src="https://i.pinimg.com/avatars/gremillion2045_1407265336_280.jpg" class="img-fluid" alt="responsive image">
     </div>
     <div class="col-md-6">
-        <h3>This is the paragraph that is going to talk about me</h3>
+        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</h3>
     </div>
     <div class="col-md-3">
         <h1></h1>
