--- a/portfolio.html
+++ b/portfolio.html
@@ -8,8 +8,6 @@
 
 	
 
-
-
 <nav class="navbar navbar-default">
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -38,7 +36,7 @@
 <div class="container">
 <div class="row">
     <div class="col-md-3">
-        <h1>About Me
+        <h1>Portfolio
         </h1>
     </div>  
 
@@ -67,7 +65,7 @@
         <img src="https://i.pinimg.com/avatars/gremillion2045_1407265336_280.jpg">
     </div>
     <div class="col-md-6">
-        <h3>This is the paragraph that is going to talk about me</h3>
+        <h3>This is going to have all of my portfolio completed things in it</h3>
     </div>
     <div class="col-md-3">
         <h1></h1>
@@ -78,3 +76,4 @@
 
 
 </body></html>
+<!--I couldn't figure out how to make the responsive part look good on this, so I am going to attempt again and try to work with someone on Tuesday to be helped.-->
